# yandex-algorithmic-workout

./: CMakeLists.txt  README.md
divB/: 1B_metro.cc  1E_triangle.cc
division_B/: 1A_interactor.cpp  1C_dates.cc  1D_school.cc
